# First-Steps

./: .gitignore  CMakeLists.txt  main.cpp
include/: component.hpp  entity.hpp  input.hpp  program.hpp  renderer.hpp  resource_manager.hpp  scene.hpp  serializer.hpp  shader.hpp  sprite_renderer.hpp  window.hpp
include/cereal/archives/: xml.hpp:Zone.Identifier
include/components/: camera2D.hpp  sprite_renderer.hpp  transform_2D.hpp
include/glad/: glad.h
include/util/: generational_vector.hpp
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  camera2D.cpp  component.cpp  entity.cpp  glad.c  input.cpp  program.cpp  renderer.cpp  scene.cpp  sprite_renderer.cpp  transform_2D.cpp  window.cpp
